# neon-operator

./: .dockerignore  .gitignore  .gitmodules  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.controlplane  Dockerfile.multi  Dockerfile.operator  Makefile  PROJECT  README.md  Tiltfile  cleanup-e2e-clusters.sh  go.mod  go.sum  justfile  release.toml  service.yaml
.github/workflows/: docker.yml  e2e.yml  release.yml
.zed/: debug.json
api/v1alpha1/: branch_types.go  cluster_funcs.go  cluster_types.go  groupversion_info.go  pageserver_types.go  project_types.go  safekeeper_types.go  zz_generated.deepcopy.go
cmd/: main.go
cmd/controller/: main.go
cmd/controlplane/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: neon.oltp.molnett.org_branches.yaml  neon.oltp.molnett.org_clusters.yaml  neon.oltp.molnett.org_pageservers.yaml  neon.oltp.molnett.org_projects.yaml  neon.oltp.molnett.org_safekeepers.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: branch_admin_role.yaml  branch_editor_role.yaml  branch_viewer_role.yaml  cluster_admin_role.yaml  cluster_editor_role.yaml  cluster_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  pageserver_admin_role.yaml  pageserver_editor_role.yaml  pageserver_viewer_role.yaml  project_admin_role.yaml  project_editor_role.yaml  project_viewer_role.yaml  role.yaml  role_binding.yaml  safekeeper_admin_role.yaml  safekeeper_editor_role.yaml  safekeeper_viewer_role.yaml  service_account.yaml
config/samples/: kustomization.yaml  neon_v1alpha1_branch.yaml  neon_v1alpha1_cluster.yaml  neon_v1alpha1_pageserver.yaml  neon_v1alpha1_project.yaml  neon_v1alpha1_safekeeper.yaml
crates/admission_webhook/: Cargo.toml  Dockerfile  README.md
crates/admission_webhook/src/: cert_reloader.rs  main.rs  validator.rs
crates/crdgen/: Cargo.toml
crates/crdgen/src/: main.rs
crates/e2e_tests/: Cargo.toml
crates/e2e_tests/src/: lib.rs  observability.rs  parallel_setup.rs  state_machine.rs  waiting.rs
crates/e2e_tests/tests/: basic_e2e.rs
crates/neon_cluster/: Cargo.toml
crates/neon_cluster/src/: lib.rs  tests.rs
crates/neon_cluster/src/api/v1/: mod.rs  neonbranch.rs  neoncluster.rs  neonproject.rs
crates/neon_cluster/src/api/v1alpha1/: mod.rs  neonpageserver.rs
crates/neon_cluster/src/compute/: deployment.rs  mod.rs  service.rs  spec.rs
crates/neon_cluster/src/controllers/: branch.rs  branch_controller.rs  cluster_controller.rs  mod.rs  pageserver.rs  pageserver_controller.rs  project.rs  project_controller.rs  resources.rs  safekeeper.rs  storage_broker.rs  storage_controller.rs
crates/neon_cluster/src/controllers/pageserver/: mod.rs  pod.rs  reconcile.rs  service.rs
crates/neon_cluster/src/pageserver/: config.rs  deployment.rs  mod.rs  reconcile.rs  service.rs
crates/neon_cluster/src/storage_controller/: client.rs  mod.rs  types.rs
crates/neon_cluster/src/util/: branch_status.rs  cluster_status.rs  errors.rs  jwt_keys.rs  metrics.rs  mod.rs  pageserver_status.rs  project_status.rs  secrets.rs  status.rs  telemetry.rs
crates/neon_storage/: Cargo.toml
crates/neon_storage/src/: lib.rs
crates/neon_storage/src/controllers/: controller.rs  mod.rs  pageserver.rs  safekeeper.rs  storage_broker.rs
crates/neon_storage/src/util/: errors.rs  metrics.rs  mod.rs
crates/operator/: Cargo.toml  lib.rs  main.rs  server.rs
crates/operator/compute/: mod.rs  operations.rs  spec.rs
crates/operator/handlers/: compute.rs  health.rs  hooks.rs  metrics.rs  mod.rs
crates/operator/services/: compute_service.rs  hook_service.rs  mod.rs
hack/dev/: kind-with-registry
internal/controller/: branch_controller.go  branch_controller_test.go  branch_create.go  cluster_controller.go  cluster_controller_test.go  cluster_create.go  pageserver_controller.go  pageserver_controller_test.go  pageserver_create.go  project_controller.go  project_controller_test.go  safekeeper_controller.go  safekeeper_controller_test.go  safekeeper_create.go  suite_test.go
internal/controlplane/: routes.go  routes_test.go  server.go
neon-images/: Dockerfile  Dockerfile.base  Dockerfile.compute-node
poc/: Makefile  compute_node.yaml  credentials.json  ns.yaml  pageserver.yaml  safekeeper.yaml  storage_broker.yaml  tenant.yaml
specs/compute/: configmap.go  deployment.go  service.go  spec.go  spec_test.go
specs/pageserver/: configmap.go  pod.go  pvc.go  service.go
specs/safekeeper/: pod.go  pvc.go  service.go
specs/storagebroker/: deployment.go  service.go
specs/storagecontroller/: deployment.go  service.go
src/: controller.rs  crdgen.rs  lib.rs  main.rs  mod.rs  neon_storage.rs  storage_broker.rs  util.rs
src/neon_cluster/: controller.rs  mod.rs  resources.rs  storage_broker.rs
src/neon_storage/: controller.rs  storage_broker.rs
src/util/: errors.rs  metrics.rs  mod.rs  util.rs
test/e2e/: e2e_suite_test.go  e2e_test.go
utils/: contextkeys.go  fieldmanager.go  ids.go  jwtmanager.go  jwtmanager_test.go  status.go  status_test.go
yaml/: branch.yaml  cluster.yaml  cnpg.yaml  crd.yaml  neon-cluster.yaml  pageserver.yaml  project.yaml  safekeeper.yaml
yaml/admission/: certificate.yaml  deployment.yaml  rbac.yaml  reloader.yaml  webhook.yaml
yaml/operator/: operator.yaml
