[package]
name = "crdgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/main.rs"

[dependencies]
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde = "1.0.203"
serde_yaml = "0.9.34"
neon_storage = {"path" = "../neon_storage"}

[dependencies.kube]
features = ["runtime", "client", "derive" ]
version = "0.87.1"
