[package]
name = "crdgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/main.rs"

[dependencies]
k8s-openapi = { version = "0.25.0", features = ["latest"] }
serde = "1.0.203"
serde_yaml = "0.9.34"
neon_cluster = { "path" = "../neon_cluster" }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "1.1.0"

[lints]
workspace = true
