[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core testing
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
serial_test = "3.0"

# Kubernetes
kube = { version = "0.87", features = ["client", "derive", "config"] }
k8s-openapi = { version = "0.20", features = ["latest"] }

# S3/MinIO client for bucket setup
aws-sdk-s3 = "1.76"
aws-config = "1.8"
aws-credential-types = "1.2"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Our operator
neon_cluster = { path = "../neon_cluster" }

[dev-dependencies]
pretty_assertions = "1.4"
