[package]
name = "neon_cluster"
version = "0.1.0"
edition = "2021"

[lib]
name = "neon_cluster"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
hex = "0.4.3"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = [
    "tokio",
], optional = true }
prometheus = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
base64 = "0.22.1"
sha2 = "0.10.8"
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.9", optional = true }
tracing = "0.1.37"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
openssl-sys = { version = "0.9.104", features = ["vendored"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.27"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "1.1.0"
