[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[features]
default = []
telemetry = ["neon_cluster/telemetry"]

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = "0.4.41"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
neon_cluster = { path = "../neon_cluster" }
prometheus = "0.13.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }

[dependencies.kube]
features = ["runtime", "client", "derive", "ws"]
version = "1.1.0"

[[bin]]
name = "operator"
path = "main.rs"

[lints]
workspace = true
